Renaming App da PawTracker a Puppy Planner

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">PawTracker</string>
-    <string name="title_activity_main">PawTracker</string>
+    <string name="app_name">Puppy Planner</string>
+    <string name="title_activity_main">Puppy Planner</string>
     <string name="package_name">com.marcocardile.app</string>
     <string name="custom_url_scheme">com.marcocardile.app</string>
 </resources>
